--- a/wp-content/themes/outrisk/css/outrisk.css
+++ b/wp-content/themes/outrisk/css/outrisk.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
-
 :root {
   --the-black: #000000;
   --the-white: #fff;
@@ -106,12 +104,12 @@
 
 @font-face {
   font-family: "outrisk-icons";
-  src: url("font/outrisk-icons.eot?28549027");
-  src: url("font/outrisk-icons.eot?28549027#iefix") format("embedded-opentype"),
-    url("font/outrisk-icons.woff2?28549027") format("woff2"),
-    url("font/outrisk-icons.woff?28549027") format("woff"),
-    url("font/outrisk-icons.ttf?28549027") format("truetype"),
-    url("font/outrisk-icons.svg?28549027#outrisk-icons") format("svg");
+  src: url("font/outrisk-icons.eot?84954633");
+  src: url("font/outrisk-icons.eot?84954633#iefix") format("embedded-opentype"),
+    url("font/outrisk-icons.woff2?84954633") format("woff2"),
+    url("font/outrisk-icons.woff?84954633") format("woff"),
+    url("font/outrisk-icons.ttf?84954633") format("truetype"),
+    url("font/outrisk-icons.svg?84954633#outrisk-icons") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -122,7 +120,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'outrisk-icons';
-    src: url('../font/outrisk-icons.svg?28549027#outrisk-icons') format('svg');
+    src: url('../font/outrisk-icons.svg?84954633#outrisk-icons') format('svg');
   }
 }
 */
@@ -177,6 +175,11 @@
 }
 
 /* '' */
+.icon-address_icon:before {
+  content: "\e803";
+}
+
+/* '' */
 .icon-menu_icon:before {
   content: "\e804";
 }
@@ -212,6 +215,31 @@
 }
 
 /* '' */
+.icon-email:before {
+  content: "\e80b";
+}
+
+/* '' */
+.icon-menu_icon-1:before {
+  content: "\e80c";
+}
+
+/* '' */
+.icon-phone_icon:before {
+  content: "\e80d";
+}
+
+/* '' */
+.icon-plus_icon:before {
+  content: "\e80e";
+}
+
+/* '' */
+.icon-chatbot:before {
+  content: "\e80f";
+}
+
+/* '' */
 .icon-plus:before {
   content: "\e81a";
 }
@@ -230,7 +258,7 @@ a,
 p,
 ul,
 li {
-  font-family: "aquawaxmedium" !important;
+  font-family: "aquawaxlight";
 }
 
 h1,
@@ -240,6 +268,53 @@ h4,
 h5,
 h6 {
   font-family: "gothambold";
+}
+
+h2 {
+  position: relative;
+  font-size: 2.8em;
+  font-weight: 600;
+}
+
+h2::after {
+  content: "";
+  background: var(--the-orange);
+  height: 6px;
+  width: 6px;
+  display: inline-block;
+  color: var(--the-orange);
+  position: absolute;
+  bottom: 6px;
+}
+
+.two h2::after {
+  display: none;
+}
+
+.comma {
+  color: var(--the-orange);
+}
+
+h3 {
+  position: relative;
+  font-size: 1.75rem;
+  font-weight: 600;
+}
+
+h3::after {
+  content: "";
+  background: var(--the-orange);
+  height: 6px;
+  width: 6px;
+  display: inline-block;
+  color: var(--the-orange);
+  position: absolute;
+  bottom: 6px;
+}
+
+h4 {
+  font-size: 2em;
+  font-weight: 600;
 }
 
 p {
@@ -1590,16 +1665,4 @@ input[type="search"].search-field {
 
 .footer-middle {
   padding: 30px 0px;
-}
-
-/*-------*/
-
-/* FAQs */
-
-.faqBanner {
-  background-color: var(--the-lightblue);
-}
-
-.faq-text {
-  padding-top: 150px;
 }
